2013-07-30  Ramon Casero  <rcasero@gmail.com>

	* Delete matlab/test/test_check_sphtrisurf_vertices.m:

	- I had forgotten to delete the test script of function
	check_sphtrisurf_vertices() that was deleted yesterday.

2013-07-30  Christopher Kelly  <christopher.kelly28@gmail.com>

	* Add common.svnprops

	- SVN properties file which can be imported in the SVN properties window
	when adding MATLAB files to repository. This contains the Rev, Date and
	native properties, and will save us from the pain in the neck that would
	be having to add them by hand for every new file.

2013-07-30  Christopher Kelly  <christopher.kelly28@gmail.com>

	* Add matlab/CardiacToolbox/ventricles_phantom.m: (0.1.0)
	* Add matlab/test/test_ventricles_phantom.m: (0.1.0)

	- VENTRICLES_PHANTOM Create phantom image of simplified heart ventricles.

2013-07-30  Ramon Casero  <rcasero@gmail.com>

	* release 0.11.0

	- Fixed some issues with MEX functions failing on Windows because
	the DLLs they linked to (CGAL, GMP, MPFR) where not visible. That
	has been fixed by adding code to add_gerardus_paths.m, so that the
	DLL directories are added from Matlab to the system path in
	Windows. This realease has been tested to work on Windows.

	* CMakeLists.txt: (0.5.3)

	- Fix bug. In Windows, gmp and mpfr are provided as .lib/.dll
	pairs. They have to be added to the project as shared and not
	static libraries. Also, we have to set up some variables as we do
	in linux/mac.

2013-07-29  Ramon Casero  <rcasero@gmail.com>

	* matlab/add_gerardus_paths.m: (0.2.1)

	- Clear up after running.

	* matlab/add_gerardus_paths.m: (0.2.0)

	- Automate adding system paths to DLLs for Windows.

2013-07-28  Ramon Casero  <rcasero@gmail.com>

	* matlab/add_gerardus_paths.m: (0.1.7)

	- I had forgotten to add CgalToolbox.

	* matlab/CgalToolbox/CgalCheckSelfIntersect.cpp: (0.1.1)

	- Fix bug. I had commented out the "else" line in two "if" blocks,
	so legitimate intersections were being counted as
	self-intersections.
